Scrollbar issue fixed.

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,7 +1,7 @@
 .App {
   display: flex;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   /*background-image: -webkit-linear-gradient(left, #061313, #339999);*/
@@ -15,10 +15,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 10.5vh;
   margin: 11.81vh 0 0 0;
-  padding: 1vh 0 0 0;
+  padding: 1.75vh 0 0 0;
   background-color: rgba(0, 0, 0, 0.83);
 }
 
@@ -52,10 +52,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1.2vh 0 0 0;
+  padding: 1.5vh 0 0 0;
   width: 20vw;
   height: 6vh;
-  margin: -1vh 0 0 10.5vw;
+  margin: 1vh 0 0 10.5vw;
   border-radius: 20px;
   background-color: rgba(0, 0, 0, 0.84);
 }
@@ -67,7 +67,7 @@
   padding: 1.3vh 0 0 0;
   width: 20vw;
   height: 6vh;
-  margin: 5vh 0 -3.5vh 12vw;
+  margin: 6.55vh 0 -3.5vh 12vw;
   border-radius: 20px;
   background-color: rgba(0, 0, 0, 0.84);
 }
